<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="POU_copyXmeasXmv" Id="{93d72704-48ea-45fa-a1f5-7d9d3322b971}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM POU_copyXmeasXmv
VAR
	II: INT := 1;
	
	iiXmeasReactor			:	ARRAY[1..16] OF INT := [1,2,3,4,5,6,7,8,9,21,23,24,25,26,27,28];
	iiXmvReactor			:	ARRAY[1..7] OF INT := [1,2,3,4,10,11,12];
	
	iiXmeasSep				:	ARRAY[1..15] OF INT := [10,11,12,13,14,20,22,29,30,31,32,33,34,35,36];
	iiXmvSep				:	ARRAY[1..3] OF INT := [5,6,7];
	
	iiXmeasStrip			:	ARRAY[1..10] OF INT := [15,16,17,18,19,37,38,39,40,41];
	iiXmvStrip				:	ARRAY[1..2] OF INT := [8, 9];	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[

// XMEAS from REACTOR
FOR II := 1 TO SIZEOF(iiXmeasReactor)/SIZEOF(iiXmeasReactor[1]) DO
	GVL.XMEAS[iiXmeasReactor[ii]]:=GVL.XMEAS_FROM_REACTOR[II];
END_FOR

// XMV FROMfrom REACTOR
FOR II := 1 TO SIZEOF(iiXmvReactor)/SIZEOF(iiXmvReactor[1]) DO
	GVL.XMV[iiXmvReactor[ii]]:=GVL.XMV_FROM_REACTOR[II];
END_FOR

// XMEAS from SEPARATOR
FOR II := 1 TO SIZEOF(iiXmeasSep)/SIZEOF(iiXmeasSep[1]) DO
	GVL.XMEAS[iiXmeasSep[ii]]:=GVL.XMEAS_FROM_SEPARATOR[II];
END_FOR

// XMV FROMfrom SEPARATOR
FOR II := 1 TO SIZEOF(iiXmvSep)/SIZEOF(iiXmvSep[1]) DO
	GVL.XMV[iiXmvSep[ii]]:=GVL.XMEAS_FROM_SEPARATOR[II];
END_FOR

// XMEAS from STRIPPER
FOR II := 1 TO SIZEOF(iiXmeasStrip)/SIZEOF(iiXmeasStrip[1]) DO
	GVL.XMEAS[iiXmeasStrip[ii]]:=GVL.XMEAS_FROM_STRIPPER[II];
END_FOR

// XMV FROMfrom STRIPPER
FOR II := 1 TO SIZEOF(iiXmvStrip)/SIZEOF(iiXmvStrip[1]) DO
	GVL.XMV[iiXmvStrip[ii]]:=GVL.XMEAS_FROM_STRIPPER[II];
END_FOR]]></ST>
    </Implementation>
    <LineIds Name="POU_copyXmeasXmv">
      <LineId Id="6" Count="1" />
      <LineId Id="5" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="22" Count="2" />
      <LineId Id="29" Count="8" />
      <LineId Id="28" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="48" Count="7" />
      <LineId Id="11" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>